Shdows and gradients were added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor"> <!--Agregar enlaces de un solo nivel a otras "pantallas"-->
-            <a href="#">Inicio</a> <!--Shift+Alt+Flecha de Abajo-->
+            <a href="#">Inicio</a> <!--Shift+Alt+Flecha de Abajo para agregar más links-->
             <a href="#">Sobre Mí</a>
             <a href="#">Clientes</a>
             <a href="#">Contacto</a>
@@ -36,11 +36,11 @@
             </svg>
             <p>Guatemala City, Guatemala</p>
 
-            <a href="#">Contactar</a>
+            <a  class="boton" href="#">Contactar</a>
         </div>
     </section>
     
-    <main> <!--Contenido principal de la página (Solo se usa una vez)-->
+    <main class="contenedor sombra"> <!--Contenido principal de la página (Solo se usa una vez)-->
         <h2>Mis Servicios</h2>
         <section>
             <h3>Diseño Web</h3>
